--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "irc": "^0.5.2",
     "node-stopwatch": "0.0.1",
+    "request": "^2.79.0",
     "statman": "^0.9.2"
   }
 }
