--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "author": "MrOnlineCoder",
   "license": "MIT",
   "dependencies": {
+    "country-list": "^1.1.0",
     "irc": "^0.5.2",
-    "node-stopwatch": "0.0.1",
-    "request": "^2.79.0",
-    "statman": "^0.9.2"
+    "request": "^2.79.0"
   }
 }
